css/style.css
@import url("https://fonts.googleapis.com/css2?family=Goldman&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Underdog&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Texturina:wght@200&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Kelly+Slab&display=swap");

/*=====================GLOBAL=======================*/
html {
  overflow: hidden;
}
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  scroll-behavior: smooth;
}

a {
  text-decoration: none;
}

ul {
  list-style-type: none;
}
/*=========X===========GLOBAL==============X========*/

/*=========X===========HEADER==============X========*/
header {
  margin-top: -10px;
  width: 100%;
  min-height: 100vh;
  max-height: 100.5vh;
  background: url(../images/1-background.jpg);
  background-size: cover;
  background-position: center;
}

.korin {
  overflow: hidden;
  max-width: 100%;
  max-height: 100vh;
  position: fixed;
  color: #c96b55;
  background-color: #c96b55;
}

/*=========================================================================my menu=======*/
.my-menu {
  display: none;
  justify-content: center;
  align-items: center;
  position: absolute;
  z-index: 1;
  width: 100%;
  height: 100%;
  background-color: #071855de;
  overflow: hidden;
}

.my-menu:before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 1;
  background-color: #071855de;
  mix-blend-mode: screen;
}

.menu-elements {
  z-index: 1;
  text-align: center;
  font-size: 48px;
}

.menu-elements h2 {
  margin: 10px;
  cursor: pointer;
  color: white;
}

.menu-elements h2:hover {
  color: orange;
  transition: 0.6s;
}

/*========================================================================my menu=======*/

/*=====================================TOP=========================*/
.header-top {
  height: 10vh;
}

/*==============hamburger==========================*/
.menu-btn {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 30px;
  height: 30px;
  cursor: pointer;
  transition: all 0.5s ease-in-out;
  left: 30px;
  top: 20px;
  z-index: 1;
}

.menu-btn_burger {
  z-index: 1;
  width: 27px;
  height: 4px;
  background: rgb(212, 209, 209);
  border-radius: 50px;
  box-shadow: 0 2px 5px rgba(255, 101, 47, 0.2);
  transition: all 0.5s ease-in-out;
}

.menu-btn_burger::before,
.menu-btn_burger::after {
  content: "";
  position: absolute;
  width: 27px;
  height: 4px;
  background: #fff;
  border-radius: 5px;
  box-shadow: 0 2px 5px rgba(255, 101, 47, 0.2);
  transition: all 0.5s ease-in-out;
}

.menu-btn_burger::before {
  transform: translateY(-8px);
}

.menu-btn_burger::after {
  transform: translateY(8px);
}

/*====animation======*/
.menu-btn.open .menu-btn_burger {
  transform: translateX(-50px);
  background: transparent;
  box-shadow: none;
}

.menu-btn.open .menu-btn_burger::before {
  transform: rotate(45deg) translate(35px, -35px);
}

.menu-btn.open .menu-btn_burger::after {
  transform: rotate(-45deg) translate(35px, 35px);
}
/*=======x======hamburger===================x==========*/

/*==============Naruto-Saske-Sakura====================*/
.top-words {
  position: relative;
  left: 100px;
  top: -5px;
  width: 50%;
}

.top-words a {
  color: white;
  font-size: 20px;
  font-family: "Goldman", cursive;
  margin: 0 15px;
}

.top-words a:hover {
  color: orange;
  border-bottom: 2px solid orange;
  transition: 0.5s;
}
/*=======x======Naruto-Saske-Sakura=========x==========*/

/*====login logout======*/
.loginout {
  position: absolute;
  top: 25px;
  right: 100px;
  overflow-x: visible;
}

.loginout a {
  font-family: Monotype;
  font-family: "Texturina", serif;
  margin: 5px;
  padding: 6px 20px;
  color: white;
  background-color: #c96b55;
  border: 1px solid white;
  border-radius: 2rem;
  outline: none;
}

.loginout a#login {
  background: transparent;
}

.loginout a#login:hover {
  background-color: #c96b55;
}

/*=xx==login logout===x===*/

/*===========xxxx======================TOP===============xxxxx======*/

/*==================NARUTO UZUMAKI====================*/
.center {
  position: absolute;
  top: 30%;
  width: 40%;
  left: 12%;
}

.center h1 {
  color: white;
  font-size: 70px;
  margin: 1rem 0;
  font-family: "Underdog", cursive;
  letter-spacing: 10px;
}
/*========x=========NARUTO UZUMAKI===========x========*/

/*------------------------------------------------------------Navigation right-----*/
.logo-mobile {
  display: none;
}
.nav-right {
  position: absolute;
  top: 0;
  right: 0;
  width: 5%;
  height: 100vh;
  background-color: #12256993;
  border-left: 0.1px solid grey;
}

.nav-right .logo img {
  width: 100%;
  cursor: pointer;
}

.nav-right .social-icons {
  display: flex;
  flex-direction: column;
  margin-top: 10%;
  margin-bottom: 4rem;
}

.nav-right .social-icons a {
  margin-top: 20%;
  color: white;
  text-align: center;
  font-size: 18px;
}

.nav-right .social-icons a:hover {
  color: orange;
  transition: 0.5s;
}

.nav-right .right-words {
  color: rgb(255, 255, 255);
}

.nav-right .right-words h3 {
  transform: rotate(90deg);
  font-family: Jokerman;
  font-size: 16px;
}

/*--x-------------------------------------------------------------------------------------------------Navigation right--x--*/

/*==================SCROLL DOWN====================*/
.scrolldown {
  position: absolute;
  bottom: 20px;
  left: 50%;
  width: 40px;
  height: 40px;
  transform: translateY(-80px) translateX(-50%) rotate(45deg);
  cursor: pointer;
}

.scrolldown span {
  position: absolute;
  top: 0;
  left: 0;
  display: block;
  width: 100%;
  height: 100%;
  border-bottom: 2px solid #fff;
  border-right: 2px solid #fff;
  animation: animate 1.5s linear infinite;
  opacity: 0;
}
/* ... */

